adding more tests for first scenarios