@@ -3,47 +3,47 @@ import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebElement;
 import org.testng.Assert;
-
 import java.util.List;
-
 public class productSearch {
-
     WebDriver driver;
     public productSearch(WebDriver driver) {
         this.driver = driver;
     }
-    By searchBox = By.id("twotabsearchtextbox");
-
     public void searchFor(String text) {
-        driver.findElement(searchBox).sendKeys(text);
+        WebElement searchBox = driver.findElement(By.id("twotabsearchtextbox"));
+        searchBox.sendKeys(text);
+        searchBox.click();
     }
-    By searchResult = By.id("nav-search-submit-button");
     public void searchResult() {
-        driver.findElement(searchResult).click();
+        WebElement searchResult = driver.findElement(By.id("nav-search-submit-button"));
+        searchResult.click();
     }
-
     public void selectItem() {
         List<WebElement> searchResults = driver.findElements(By.xpath("//div[@data-component-type='s-search-result']"));
-        WebElement firstResult = searchResults.get(0);
-        firstResult.click();
-
-
+        WebElement firstResult = searchResults.getFirst(); //get the first product
+        firstResult.click(); //click on the first product as mentioned in the task
     }
-    By productImage = By.cssSelector("#imgTagWrapperId");
     public void productImage() {
-        driver.findElement(productImage);
-        Assert.assertNotNull(productImage, "Image is not displayed");
+        WebElement productImage = driver.findElement(By.id("landingImage"));
+        Assert.assertNotNull(productImage, "Image is not displayed"); //verify that the product image is displayed
     }
-    By addToCartBTN = By.cssSelector("input#add-to-cart-button");
     public void AddToCart(){
-        driver.findElement(addToCartBTN).click();
+
+        WebElement addToCartBTN = driver.findElement(By.id(("add-to-cart-button")));
+        addToCartBTN.click();
     }
     public void verifyCart(){
-
         Assert.assertTrue(driver.getCurrentUrl().contains("https://www.amazon.eg/cart/"),"URL doesn't contain the expected substring");
+        WebElement cartCount = driver.findElement(By.id("nav-cart-count"));
+        Assert.assertEquals(cartCount.getText(), "1", "Cart does not contain one item");
 
     }
-
-
-
+    public void removeItem(){
+        WebElement goToCart = driver.findElement(By.id("sw-gtc"));
+        goToCart.click();
+        WebElement deleteBTN = driver.findElement(By.xpath("//input[@value='حذف']"));
+        deleteBTN.click();
+        WebElement cartCountAfterDelete = driver.findElement(By.id("nav-cart-count"));
+        Assert.assertEquals(cartCountAfterDelete.getText(), "0", "Cart is not empty");
+    }
 }
